[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 493.0
margin_top = 123.0
margin_right = 620.0
margin_bottom = 159.0
text = "armazena dado"

[node name="Button2" type="Button" parent="."]
margin_left = 494.0
margin_top = 172.0
margin_right = 618.0
margin_bottom = 206.0
text = "incrementa idade"

[node name="Button3" type="Button" parent="."]
margin_left = 496.0
margin_top = 220.0
margin_right = 619.0
margin_bottom = 253.0
text = "impar par"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 525.0
margin_top = 348.0
margin_right = 583.0
margin_bottom = 372.0

[node name="Label" type="Label" parent="."]
margin_left = 604.0
margin_top = 356.0
margin_right = 653.0
margin_bottom = 370.0

[node name="Label2" type="Label" parent="."]
margin_left = 480.0
margin_top = 353.0
margin_right = 529.0
margin_bottom = 367.0
text = "idade"

[node name="Label3" type="Label" parent="."]
margin_left = 481.0
margin_top = 387.0
margin_right = 530.0
margin_bottom = 401.0
text = "nome"

[node name="Label4" type="Label" parent="."]
margin_left = 604.0
margin_top = 387.0
margin_right = 653.0
margin_bottom = 401.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 526.0
margin_top = 383.0
margin_right = 584.0
margin_bottom = 407.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
